--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		<button class="btn simonbutton unclickable" id="blue" data-value="3"></button>
 	</div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.9/howler.core.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="script.js"></script>
 </body>
